Add MongoDB healthcheck to ensure DB is ready before app starts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: '3.8'
 
 services:
+  # MongoDB Database Service
+  mongodb:
+    image: mongo:latest
+    container_name: mediconsult_mongodb
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db  # Persistent volume for database
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 40s
+    restart: unless-stopped
+
   # Web Application Service
   web:
     image: aqsaimtiaz/mediconsult-app:latest
@@ -10,17 +26,8 @@ services:
     environment:
       - MONGODB_URI=mongodb://mongodb:27017/
     depends_on:
-      - mongodb
-    restart: unless-stopped
-
-  # MongoDB Database Service
-  mongodb:
-    image: mongo:latest
-    container_name: mediconsult_mongodb
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db  # Persistent volume for database
+      mongodb:
+        condition: service_healthy
     restart: unless-stopped
 
 # Named volume for data persistence (REQUIRED by assignment)
